examples/test/testpolicy19716.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19716
  namespace: namespace463
spec:
  podSelector:
    matchLabels:
      key23: value25
      key41: value27
      key1: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value34
          key19: value46
      podSelector:
        matchLabels:
          key1: value20
          key12: value15
          key2: value40
